[project]
name = "llm-knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.8",
    "docling>=2.17.0",
    "igraph>=0.11.8",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "matplot>=0.1.9",
    "nltk>=3.9.1",
    "openai>=1.60.2",
    "pip>=25.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "torch>=2.5.1",
]
